Changed URL to URI.toURL()